2002-08-06  Rachel Hestilow  <hestilow@ximian.com>

	* generator/SignalHandler.cs: Handle null arguments and return values.

	* sample/Makefile.in: Add fifteen game.

2002-08-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* sample/GnomeHelloWorld.cs: use DeleteEventHandler.

2002-08-07  Duncan Mak  <duncan@ximian.com>

	* sample/Fifteen.cs: Fixed movement logic. It works now. Added
	'debug' flag. Run 'mono ./Fifteen.exe debug' to see movement info.

2002-08-07  Duncan Mak  <duncan@ximian.com>

	* sample/Fifteen.cs: Added new canvas example.	

2002-08-06  Duncan Mak  <duncan@ximian.com>

	* glue/canvasitem.c: 
	* gnome/CanvasItem.custom: Added accessor to get the 'canvas' field.

	* sample/CanvasExample.cs: Removed extra methods.

2002-08-05  Rachel Hestilow  <hestilow@ximian.com>

	* makefile, */Makefile.in: Packaging fix from
	Robert McQueen (a.k.a. Robot101).

2002-08-05  Rachel Hestilow  <hestilow@ximian.com>

	* gnome/Canvas*.custom, IconTextItem.custom: Added.

	* sample/CanvasExample.cs: Added.
	* sample/Makefile.in: Build canvas example in gnome build.
	
2002-08-05  Rachel Hestilow  <hestilow@ximian.com>

	* parser/Gnome.metadata: Patch from duncan for
	bug #28553 (canvas item event handler rename).

2002-08-04  Joe Shaw  <joe@assbarn.com>

	* configure.in: We actually need libgnomeui, not libgnome.

2002-08-04  Mike Kestner <mkestner@speakeasy.net>

	Tagged for 0.3 and updated configure.in to 0.4.
	Back open for commits.

2002-08-03  Mike Kestner <mkestner@speakeasy.net>

	Freezing cvs for 0.3 release. Please no commits until the release.

2002-08-03  Mike Kestner <mkestner@speakeasy.net>

	* generator/Method.cs : Added IsGetter, IsSetter, ReturnType. Made
	  GenerateImport, GenerateBody public.
	* generator/Parameters.cs : Added Parameter::MarshalType
	* generator/Property.cs : Added logic to use methods instead of text
	  properties wherever possible.
	
2002-08-03  Rachel Hestilow  <hestilow@ximian.com>
