@@ -1,3 +1,7 @@
+2002-08-07  Duncan Mak  <duncan@ximian.com>
+
+	* sample/Fifteen.cs: Fixed scramble. The whole thing works now.
+
 2002-08-06  Rachel Hestilow  <hestilow@ximian.com>
 
 	* generator/SignalHandler.cs: Handle null arguments and return values.
